[dependencies]
ndarray = '0.13.0'
num-traits = '0.2.8'
num-complex = "0.2.3"
sprs = '0.6.5'
chfft = "0.3.2"
clap = "2.33.0"
linear_solver = {path='../linear_solver'}

[dependencies.fitsimg]
git = 'https://github.com/astrojhgu/rust_fitsimg.git'

[package]
authors = ['Gu Junhua <jhgu@nao.cas.cn>']
edition = '2018'
name = 'simscan'
version = '0.1.0'
